--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+<html lang="ja"></html>
 <head>
-  <html lang="ja"></html>
   <meta charset="utf-8"/>
-  
+  <title>アンケート</title>
+  <link src="style.css"/>
 </head>
