--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <head>
   <meta charset="utf-8"/>
   <title>アンケート</title>
-  <link src="style.css"/>
+  <link href="style.css" rel="style"/>
 </head>
+<body>
+  <div class="link">
+    <a href="#" onclick=""></a>
+  </div>
+</body>
