--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link href="style.css" rel="style"/>
 </head>
 <body>
-  <div class="link">
-    <a href="#" onclick=""></a>
+  <div id="link">
+    <a href="#" onclick="alert('未だ有らず')">アンケート</a>
+    <a href="#" onclick="alert('未だ有らず')">アンケート</a>
   </div>
 </body>
