--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>アンケート</title>
   <link href="style.css" rel="style"/>
 </head>
-<body>
+<body> 
+  <p class="i">アンケート</p>
   <div id="link">
-    <a href="#" onclick="alert('未だ有らず')">アンケート</a>
-    <a href="#" onclick="alert('未だ有らず')">アンケート</a>
+    <a class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</a>
+    <a class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</a>
   </div>
 </body>
