--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
   <p class="i">アンケート</p>
-    <a class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</a>
-    <a class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</a>
+    <button class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</button>
+    <button class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</button>
   
 </body>
