--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="ja"></html>
-<head>
-  <meta charset="utf-8"/>
-  <title>アンケート</title>
-  <link href="style.css" rel="style"/>
+<html lang="ja">
 
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+    rokkochemistry
+  </title>
+  <link href="style.css" rel="stylesheet">
+  <script src="main.js" async></script>
 </head>
-<body> 
-  <p class="i">アンケート</p>
-    <button class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</button>
-    <button class="link-b" href="#" onclick="alert('未だ有らず')">アンケート</button>
-  
+
+<body>
+  <h1>
+    部誌
+  </h1>
+
+  <a id="dl-link" class="link-btn" href="文化祭パンフレット.pdf" download="文化祭パンフレット.pdf" onclick="alert('未だ有らず')">
+    アンケート1&#x279D;
+  </a>
+  <a class="link-btn" href="./viewer.html" onclick="alert('未だ有らず')">
+    アンケート2&#x279D;
+  </a>
 </body>
