--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     部誌
   </h1>
 
-  <a id="dl-link" class="link-btn" href="文化祭パンフレット.pdf" download="文化祭パンフレット.pdf" onclick="alert('未だ有らず')">
+  <a id="dl-link" class="link-btn" href="#" onclick="alert('未だ有らず')">
     アンケート1&#x279D;
   </a>
-  <a class="link-btn" href="./viewer.html" onclick="alert('未だ有らず')">
+  <a class="link-btn" href="#" onclick="alert('未だ有らず')">
     アンケート2&#x279D;
   </a>
 </body>
