--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </h1>
 
   <a id="dl-link" class="link-btn" href="#" onclick="alert('未だ有らず')">
-    アンケート1&#x279D;
+    アンケート1 &#10064;
   </a>
   <a class="link-btn" href="#" onclick="alert('未だ有らず')">
-    アンケート2&#x279D;
+    アンケート2 &#10064;
   </a>
 </body>
