--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     部誌
   </h1>
 
-  <a id="dl-link" class="link-btn" href="#" onclick="alert('未だ有らず')">
-    アンケート1 &#10064;
+  <a id="dl-link" class="link-btn" href="https://forms.gle/CjX5zYBwDQYTnJK36">
+    実験アンケート &#10064;
   </a>
   <a class="link-btn" href="#" onclick="alert('未だ有らず')">
     アンケート2 &#10064;
