--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     部誌
   </h1>
 
-  <a id="dl-link" class="link-btn" href="https://forms.gle/fEYahe6ufGCDVeBE9">
+  <a id="dl-link" class="link-btn" href="https://forms.gle/z1ar9b9HcDiwRQ1ZA">
     実験アンケート &#10064;
   </a>
   <a class="link-btn" href="#" onclick="alert('未だ有らず')">
